--- a/WEB02_CSS3/WebContent/12_Border.html
+++ b/WEB02_CSS3/WebContent/12_Border.html
@@ -28,27 +28,11 @@
 }
 
 .box2 {
-	width: 500px;
-	height: 80px;
-	color: white;
-	background: green;
-	
-	border-left-width: medium;
-	border-right-width: 15px;
-	border-top-width: thick;
-	border-bottom-width: 20px;
-	
-	border-left-color: yellow;
-	border-right-color: red;
-	border-top-color: black;
-	border-bottom-color: coral;
-	
-	border-left-style: dotted;
-	border-right-style: dashed;
-	border-top-style: solid;
-	border-bottom-style: double;
-	
-	text-align: center;
+	width: 400px;
+	height: 150px;
+	border: 5px solid blue;
+	border-radius: 30px;
+	text-align : center;
 }
 </style>
 </head>
