--- a/WEB03_LAYOUT/WebContent/Layout07.html
+++ b/WEB03_LAYOUT/WebContent/Layout07.html
@@ -4,22 +4,26 @@
 <meta charset="UTF-8">
 <title>Layout07</title>
 <style type="text/css">
-	#first {width:100%; height:140px; background:#FFFB8B;}
-	#top {width: 30%; height: 70px; background: #CBCF46; margin:0 auto; font-size: 200%;
-	font-weight: bold; text-align: center; line-height: 70px;}
-	#bottom {width: 30%; height:70px; background: #A5A838; margin:0 auto; font-size:80%;}
+	#first {width:100%; height:200px; background:#FFFB8B;}
+	#top {width:500px; height: 100px; background: #CBCF46; margin:0 auto; font-size: 250%;
+	font-weight: bold; text-align: center; line-height: 100px;}
+	#bottom {width:500px; height:100px; background: #A5A838; margin:0 auto; font-size:100%;}
 	
 	#second {width:100%; height:800px; background:coral;}
-	#second_view {width:1100px; height:800px; background:green; margin:0 auto;}
+	#second_view {width:1300px; height:800px; background:green; margin:0 auto;}
 	
-	.segment_view {width:300px; height:800px; background:skyblue; margin-right:}
-	.segment_view:last-child{margine:0;}
-	.segment_pic
-	.segment_bottom
-	.segment_pop
-	.segment_pop_title
-	.segment_pop_content
-	.button
+	.segment_view {position:relative; width:400px; height:800px; background:skyblue; margin-right:50px; overflow:hidden;
+	float:left;}
+	.segment_view:last-child{margin:0;}
+	.button {position:absolute; width:180px; height:50px; background:blue; right:0%; bottom:8%;
+	color:white; font-size:180%; text-align:center; line-height:50px;}
+	.segment_pic {margin:0 auto; text-align:center;}
+	.segment_pop {position:absolute; width:350px; height:350px; background:white; left: 25px; top:45%;
+	box-shadow: 3px 3px 3px 3px;}
+	.segment_pop_title {width:300px; height:100px; border:1px solid #CACACA; margin:0 auto; text-align:center;
+	font-size:230%; font-weight:bold; line-height:100px;}
+	.segment_pop_content {width:300px; height:250px; border:1px solid #CACACA; margin:0 auto; text-align:center; 
+	color:#333333;}
 	
 </style>
 </head>
@@ -31,16 +35,34 @@
 	</div>
 	<div id="second">
 		<div id="second_view">
-			1000px;
 			<div class="segment_view">
-				<div class="segment_pic"><image src="images/Penguins.jpg" ></div>
-				<div class="segment_bottom"></div>
+				<div class="segment_pic"><image src="images/Penguins.jpg" height="400px" ></div>
 				<div class="segment_pop">
 					<div class="segment_pop_title">Segment Title</div>
 					<div class="segment_pop_content">국회의원은 국회에서 직무상 행한 발언과 표결에 관하여 국회외에서 책임을 지지
 					아니한다. 누구든지 병역의무의 이행으로 인하여 불이익한 처우를 받지 아니한다</div>
-					<div class="button">button</div>
 				</div>
+				<div class="button">BUTTON</div>
+			</div>
+			
+			<div class="segment_view">
+				<div class="segment_pic"><image src="images/Lighthouse.jpg" height="400px"></div>
+				<div class="segment_pop">
+					<div class="segment_pop_title">Segment Title</div>
+					<div class="segment_pop_content">국회의원은 국회에서 직무상 행한 발언과 표결에 관하여 국회외에서 책임을 지지
+					아니한다. 누구든지 병역의무의 이행으로 인하여 불이익한 처우를 받지 아니한다</div>
+				</div>
+				<div class="button">BUTTON</div>
+			</div>
+			
+			<div class="segment_view">
+				<div class="segment_pic"><image src="images/Jellyfish.jpg" height="400px" ></div>
+				<div class="segment_pop">
+					<div class="segment_pop_title">Segment Title</div>
+					<div class="segment_pop_content">국회의원은 국회에서 직무상 행한 발언과 표결에 관하여 국회외에서 책임을 지지
+					아니한다. 누구든지 병역의무의 이행으로 인하여 불이익한 처우를 받지 아니한다</div>
+				</div>
+				<div class="button">BUTTON</div>
 			</div>
 		</div>
 	</div>
