--- a/WEB03_LAYOUT/WebContent/pre-test.html
+++ b/WEB03_LAYOUT/WebContent/pre-test.html
@@ -13,21 +13,10 @@
 	#content {position:relative; width:460px; margin: 0 auto; font-size:14px; overflow:hidden;}
 	.join_row {width:460px; hight:100px; margin:0 auto;}
 	.join_title {font-size:14px; font-weight:700; margin-bottom:20px}
-	.id_box{position:relative; width:460px; height:50px; background:white; border:1px solid #dadada; padding: 10px 267px 18px 14px;
+	.id_box{position:relative; width:460px; height:50px; background:white; border:1px solid #dadada;
 	box-sizing: border-box; vertical-align: top;}
 	#url {position:absolute; top: 16px; right: 13px; font-size:15px; line-height:18px; color:#949494;}
-	.error_box{font-size:12px; height: 5px; line-hight:14px; color:red; margin-top:20px; margin-bottom: 30px;}
-	.text_box{}
-	#lock_pic {position:absolute; right:2%;}
-	.bir_wrap{}
-	#bir_yy{position:relative; width:147px; height:50px; background:white; border:1px solid #dadada; padding: 10px 19px 18px 14px;
-	box-sizing: border-box; vertical-align: top; margin-right:10px}
-	#bir_mm{position:relative; width:147px; height:50px; background:white; border:1px solid #dadada; padding: 10px 87px 18px 14px;
-	box-sizing: border-box; vertical-align: top; margin-right:10px}
-	#bir_dd{position:relative; width:147px; height:50px; background:white; border:1px solid #dadada; padding: 10px 23px 18px 14px;
-	box-sizing: border-box; vertical-align: top; }
-	#gender {position:relative; width:460px; height:50px; background:white; border:1px solid #dadada; padding: 10px 362px 18px 14px;
-	box-sizing: border-box; vertical-align: top; margin-bottom: 100px;}
+
 </style>
 </head>
 <body>
@@ -48,95 +37,9 @@
 			<!-- 아이디 -->
 			<div class="join_row">
 				<h3 class="join_title"> <label>아이디</label></h3>
-				<span class="id_box"> 
-					<input type="text" id="id" class="text_box">
-					<span id="url"> @naver.com </span>
-				</span>
-				<div class="error_box"> 필수정보입니다. </div>
-			</div>
-			
-			
-			<!-- 비밀번호 -->
-			<div class="join_row">
-				<h3 class="join_title"><label>비밀번호</label></h3>
-				<span class="id_box">
-					<input type="password" id="password" class="text_box">
-					<span id="lock_pic"><img src="images/key1.png"> </span>
-				</span>
-				<div class="error_box"> 필수정보입니다. </div>
-			</div>
-			
-			<div class="join_row">
-				<h3 class="join_title"><label>비밀번호 재확인</label></h3>
-				<span class="id_box">
-					<input type="password" id="password_check" class="text_box">
-					<span id="lock_pic"><img src="images/key2.png"> </span>
-				</span>
-				<div class="error_box"> 필수정보입니다. </div>
-			</div>
-			
-			<!-- 이름 -->
-			<div class="join_row">
-				<h3 class="join_title"><label>이름</label></h3>
-				<span class="id_box">
-					<input type="text" id="name" class="text_box">
-				</span>
-				<div class="error_box"> 필수정보입니다. </div>
-			</div>
-			
-			<!-- 생년월일 -->
-			<div class="join_row">
-				<h3 class="join_title"><label>생년월일</label></h3>
-				<span id="bir_yy">
-					<input type="text" id="yy" placeholder="년(4자)" size="10" maxlength="4">
-				</span>
-				<span id="bir_mm">
-					<select id="mm"> 
-						<option value> 월 </option>
-						<option value="01"> 1 </option>
-						<option value="02"> 2 </option>
-						<option value="03"> 3 </option>
-						<option value="04"> 4 </option>
-						<option value="05"> 5 </option>
-						<option value="06"> 6 </option>
-						<option value="07"> 7 </option>
-						<option value="08"> 8 </option>
-						<option value="09"> 9 </option>
-						<option value="10"> 10 </option>
-						<option value="11"> 11 </option>
-						<option value="12"> 12 </option>
-					</select>
-				</span>
-				<span id="bir_dd">
-					<input type="text" id="dd" placeholder="일" size="10" maxlength="2">
-				</span>
-				<div class="error_box"> 필수정보입니다. </div>
-			</div>
-			
-			<!-- 성별 -->
-			<div class="join_row">
-				<h3 class="join_title"><label>성별</label></h3>
-				<span id="gender">
-					<select id="gender_option"> 
-						<option value> 성별 </option>
-						<option value="male"> 남성 </option>
-						<option value="female"> 여성 </option>
-						<option value="none"> 선택 안함 </option>
-					</select>
+				<span class="id_box"> 내용이 들어가야됨
 				</span>
 			</div>
-			<br/>		
-			<!-- 본인 확인 이메일(선택) -->
-			<div class="join_row">
-				<h3 class="join_title"><label>본인 확인 이메일</label></h3>
-				<span class="id_box">
-					<input type="text" id="name" class="text_box" placeholder="선택입력">
-				</span>
-			</div>
-			
-			
 		</div>
 	</div>
-</div>
-</body>
-</html>
+				
