--- a/WEB06_jQuery/WebContent/06_Event_3.html
+++ b/WEB06_jQuery/WebContent/06_Event_3.html
@@ -22,6 +22,13 @@
         height: 100%;
         background: pink;
     }
+    #print{
+        clear:both;
+        width: 200px;
+        height: 100px;
+        background: #333333;
+        color: white;
+    }
 </style>
 <script src="script/jquery-3.6.0.js"></script>
 <script type="text/javascript">
@@ -40,5 +47,6 @@
     <div class="outer">
         <div class="inner"></div>
     </div>
+    
 </body>
 </html>
